# tape

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: backtest_spy.py  hello_alpaca.py
tape/: __init__.py  backtest.py
tape/config/: settings.py
tape/data/: __init__.py  market_data.py
tape/execution/: __init__.py
tape/journal/: __init__.py
tape/risk/: __init__.py  manager.py
tape/strategies/: __init__.py  base.py  indicators.py  mean_reversion.py
tests/: test_backtest.py  test_indicators.py  test_market_data.py  test_mean_reversion.py  test_position_size.py  test_risk_manager.py
